ADD_CUSTOM_TARGET(TARGET clr ALL DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/compilerunloop.sh
	COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/compilerunloop.sh  ${CMAKE_CURRENT_BINARY_DIR}/clr 
	)

INSTALL(FILES clr DESTINATION bin PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE)
