ADD_CUSTOM_TARGET(crl ALL DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/compilerunloop.sh
	COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/compilerunloop.sh  ${CMAKE_CURRENT_BINARY_DIR}/crl 
	)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/crl 
	DESTINATION ${CMAKE_INSTALL_BINDIR} 
	PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE
)
